# arcana-samples

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
res/phi/shader/: compile_shaders.bat  compile_shaders.sh  license.txt  src.dxil  src.spv
res/phi/shader/src/: clear_fs.hlsl  fullscreen_tri.hlsl  imgui.hlsl  mesh_pbr.hlsl  pathtrace_composite.hlsl  pathtrace_lib.hlsl  postprocess.hlsl  raytrace_lib.hlsl  shaderlist.txt  shaders.json
res/phi/shader/src/bindless/: fullscreen_texture_multiplex.hlsl
res/phi/shader/src/common/: color_util.hlsli  fast_math.hlsli  math.hlsli  random.hlsli  ray_common.hlsli  space_conversion.hlsli  tonemappers.hlsli
res/phi/shader/src/nbody/: nbody_gravity.hlsl  particle_draw.hlsl
res/phi/shader/src/pathtracing/: .gitignore  INFO.txt  pathtracing_lib.hlsl
res/phi/shader/src/preprocess/: brdf_lut_gen.hlsl  equirect_to_cube.hlsl  irradiance_map_filter.hlsl  mipgen.hlsl  specular_map_filter.hlsl
res/pr/demo_render/: compile_shaders.bat  compile_shaders.sh  shadertoolsconfig.json
res/pr/demo_render/src/: shaderlist.txt
res/pr/demo_render/src/common/: cam_constants.hlsl  cam_constants.hlsli  fullscreen_vs_inout.hlsl  mesh_vs_inout.hlsli  util.hlsli
res/pr/demo_render/src/mesh/: static_mesh_depth.hlsl  static_mesh_pbr_ps.hlsl  static_mesh_vs.hlsl
res/pr/demo_render/src/post/: blit.hlsl  clear_ps.hlsl  fullscreen_vs.hlsl  taa_resolve.hlsl  tonemap.hlsl  tonemappers.hlsli
res/pr/demo_render/src/preprocess/: mipgen_array.hlsl  mipgen_gamma.hlsl
res/pr/liveness_sample/mesh/: LICENSE.txt  ball.mesh
res/pr/liveness_sample/shader/: compile_dxil.bat  compile_shaders.bat  compile_shaders.sh  compile_spirv.bat  compile_spirv.sh  mipgen_gamma.hlsl  shader.hlsl  shader_blit_fs.hlsl  shader_list.txt
res/pr/liveness_sample/shader/dxc_bin/: compile_single_shader.bat  compile_single_shader.sh
res/pr/liveness_sample/shader/dxc_bin/linux/: compile_single_shader.sh
res/pr/liveness_sample/shader/dxil/: pixel.dxil  vertex.dxil
res/pr/liveness_sample/shader/spirv/: pixel.spv  pixel_blit.spv  vertex.spv  vertex_blit.spv
res/pr/liveness_sample/shader/src/: brdf_lut_gen.hlsl  clear_fs.hlsl  equirect_to_cube.hlsl  imgui.hlsl  mipgen.hlsl  raytrace_lib.hlsl  shader.hlsl  shader_blit_fs.hlsl  shader_no_ibl.hlsl
res/pr/liveness_sample/shader/src/cloth/: compute_cloth.hlsl  compute_simple.hlsl
res/pr/liveness_sample/texture/: LICENSE.txt  uv_checker.dds
res/pr/liveness_sample/texture/ibl/: hamarikyu_bridge.hdr  license.txt
scripts/: check-clang-format.cmake  extern-check-pr.py  extern-merge-develop.py  extern-merge-develop.sh  run-tests.cmake
tests/: CMakeLists.txt
tests/babel/: CMakeLists.txt  api.cc  byte_reader.cc  byte_writer.cc  callbacks.cc  file.cc  source_map.cc
tests/babel/data/: json.cc
tests/babel/geometry/: pcd.cc
tests/cc/: CMakeLists.txt  alloc-benchmark.cc  allocator.cc  array.cc  base64.cc  bits.cc  collection_traits.cc  flags.cc  from_string.cc  function_ref.cc  hash.cc  main.cc  map.cc  optional.cc  range_ref.cc  set.cc  span.cc  special_types.hh  stream_ref.cc  string.cc  string_stream.cc  string_view.cc  to_string.cc  unique_function.cc  values.cc  vector.cc
tests/cr/: CMakeLists.txt  algorithms.cc  basics.cc  copy-guarantees.cc  flatmap.cc  ranges.cc
tests/ct/: CMakeLists.txt  big-scopes.cc
tests/inc/: CMakeLists.txt
tests/inc/framegraph/: basics.cc  scene.cc  scene.hh
tests/nx/: CMakeLists.txt  app.cc  approx.cc  args.cc  fuzz_test.cc  minimizer.cc  monte_carlo_test.cc  scratch_dir.cc  test.cc  trace_serialize.cc
tests/phi/: CMakeLists.txt  backend.d3d12.cc  backend.vk.cc  mip_generation.cc  mip_generation.hh  sample.bindless.cc  sample.cc  sample.hh  sample.imgui.cc  sample.nbody_async_compute.cc  sample.pathtracing.cc  sample.pbr.cc  sample.raytracing.cc  sample_util.cc  sample_util.hh  scene.cc  scene.hh  sse_vec.hh  temp_cmdlist.cc  temp_cmdlist.hh  texture_util.cc  texture_util.hh
tests/phi/detail/: detail.allocators.cc  detail.cmdstream.cc
tests/phi/tests/: allocators.cc  cmdstream.cc  gpustats.cc  util.cc
tests/pm/: CMakeLists.txt  edge-split.cc  halfedge-collapse.cc  pretty-printer.cc  topo-fuzzer.cc
tests/pr/: CMakeLists.txt  api-test.cc  backend.d3d12.cc  backend.vk.cc  backend_common.cc  backend_common.hh  basics.cc  detail.allocators.cc  detail.cmdstream.cc  dummy.cc  graphics-sample.cc  minimal-sample.cc
tests/pr/backend/: backend.d3d12.cc  backend.vk.cc  backend_common.cc  backend_common.hh  mip_generation.cc  mip_generation.hh  sample.cc  sample.cloth.cc  sample.compute.cc  sample.hh  sample.imgui.cc  sample.pbr.cc  sample.raytracing.cc  sample_scene.cc  sample_scene.hh  sample_util.cc  sample_util.hh  texture_util.cc  texture_util.hh
tests/pr/backend/detail/: detail.allocators.cc  detail.cmdstream.cc
tests/pr/demo_renderer/: app.cc  demo_renderer.cc  demo_renderer.hh  passes.cc  passes.hh  scene.cc  scene.hh  targets.cc  targets.hh
tests/res/: CMakeLists.txt  api.cc  basics.cc
tests/rf/: CMakeLists.txt  basics.cc  enums.cc  hash.cc  macros.cc  member_compare.cc  recursive_compare.cc  to_string.cc
tests/rlog/: CMakeLists.txt  basics.cc
tests/si/: CMakeLists.txt  api.cc  basics.cc  fuzz.cc  rendering.cc  style-sheets.cc
tests/td/: CMakeLists.txt  api.cc  fiber-nested.cc  fiber.cc  main.cc  scheduler-dependency.cc  scheduler.cc  task.cc
tests/tg/: CMakeLists.txt  la.cc
tests/tg/feature/matrix/: decompose.cc
tests/tp/: CMakeLists.txt  api.cc  conversion.cc  downsampling.cc  iteration.cc  raw_image.cc  sampler.cc  strided-views.cc  traits.cc
