cmake_minimum_required(VERSION 3.11)

add_subdirectory(cc)
add_subdirectory(rf)
add_subdirectory(td)
add_subdirectory(phi)
add_subdirectory(pr)
add_subdirectory(rlog)
add_subdirectory(nx)
add_subdirectory(pm)
add_subdirectory(si)
add_subdirectory(ct)
add_subdirectory(cr)
add_subdirectory(res)
add_subdirectory(inc)
add_subdirectory(babel)
add_subdirectory(tp)
add_subdirectory(tg)
